# poetry-plugin-up

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yaml  test.yaml  upgrade_pip_dependencies.yml
src/poetry_plugin_up/: command.py  plugin.py
tests/: conftest.py  helpers.py
tests/e2e/: test_e2e.py
tests/fixtures/simple_project/: expected_pyproject.toml  expected_pyproject_with_exclude.toml  expected_pyproject_with_latest.toml  expected_pyproject_with_latest_and_pinned.toml  expected_pyproject_with_latest_and_preserve_wildcard.toml  pyproject.toml
tests/fixtures/simple_project_poetry_v2/: expected_pyproject_with_latest.toml  expected_pyproject_with_latest_and_pinned.toml  expected_pyproject_with_latest_and_preserve_wildcard.toml  pyproject.toml
tests/integration/: test_integration.py
tests/unit/: test_unit.py
