[tool.poetry]
name = "simple-project"
version = "1.2.3"
description = "Some description."
authors = ["Mousa Zeid Baker"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
foo = "^1.1.1"
bar = "^1.1.1"
baz = {version = "^1.1.1", extras = ["qux", "quux"]}
corge = {version = "^1.1.1", optional = true}
grault = {version = "^1.1.1", allow-prereleases = true}
garply = {path = "./"}
waldo = {git = "https://example.com/test/project.git"}

[tool.poetry.group.dev.dependencies]
fred = "1.1.1"
plugh = "^1.1.1"
xyzzy = "~1.1.1"
nacho = "<1.1.1"
thud = ">1.1.1"

[tool.poetry.group.docs.dependencies]
foobar = "<=1.1.1"
foobaz = ">=1.1.1"
fooqux = "!=1.1.1"
fooquux = "*"
Foo_Corge = "^1.1.1"
