[project]
name = "simple-project"
version = "1.2.3"
description = "Some description."
authors = [{ name = "Mousa Zeid Baker"}]
license = "MIT"
requires-python = ">=3.7,<4.0"
dependencies = [
    "foo >=1.1.1,<2.0.0",
    "bar >=1.1.1,<2.0.0",
    "baz[quux,qux] >=1.1.1,<2.0.0",
    "grault >=1.1.1,<2.0.0",
    "garply @ file:///absolute/path/to/my-package/dist/garply-0.1.0.tar.gz",
    "waldo @ git+https://example.com/test/project.git"
]

[project.optional-dependencies]
extras = [
    "corge >=1.1.1,<2.0.0"
]

[dependency-groups]
dev = [
    "fred==1.1.1",
    "plugh>=1.1.1,<2.0.0",
    "xyzzy>=1.1.1,<1.2.0",
    "nacho<1.1.1",
    "thud>1.1.1"
]

docs = [
    "foobar<=1.1.1",
    "foobaz>=1.1.1",
    "fooqux!=1.1.1",
    "fooquux",
    "Foo_Corge>=1.1.1,<2.0.0"
]
